(executable
 (name ffi_types_stubgen)
 (modules ffi_types_stubgen)
 (libraries nfd_bindings_types ctypes.stubs ctypes))

(rule
 (targets ffi_ml_types_stubgen.c)
 (deps ./ffi_types_stubgen.exe)
 (action
  (with-stdout-to
   %{targets}
   (run %{deps}))))

(rule
 (targets ffi_ml_types_stubgen.exe)
 (deps
  (:c ./ffi_ml_types_stubgen.c))
 (action
  (bash
    "%{cc} %{c} -I../../nfd_c/nfd/src/include -I `dirname %{lib:ctypes:ctypes_cstubs_internals.h}` -I %{ocaml_where} -o %{targets}")))
